syntax = "proto3";

option csharp_namespace = "GrpcService1";

package persons;

service Persons {
  rpc GetPersons (PersonsRequest) returns (PersonsResult);
}

message PersonsRequest {
  int32 count = 1;
}

message Person {
	int32 id = 1;
	string surname = 2;
	string firstname = 3;
	int32 age = 4;
}

message PersonsResult {
    repeated Person persons = 1;
}
